--- a/prjct4app/prjct4app/prjct4app/InteressePage.xaml
+++ b/prjct4app/prjct4app/prjct4app/InteressePage.xaml
@@ -15,29 +15,31 @@
                    Margin="0,0,0,30"
                    />
             <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Switch HorizontalOptions="Start" Margin="50,0,0,0"/>
+                <Switch x:Name="Kunst" HorizontalOptions="Start" Margin="50,0,0,0" IsToggled="False"/>
                 <Label Text="Kunst" />
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Switch HorizontalOptions="Start" Margin="50,0,0,0"/>
+                <Switch x:Name="Natuur" HorizontalOptions="Start" Margin="50,0,0,0" IsToggled="False"/>
                 <Label Text="Natuur" />
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Switch HorizontalOptions="Start" Margin="50,0,0,0"/>
+                <Switch x:Name="Architectuur" HorizontalOptions="Start" Margin="50,0,0,0" IsToggled="False"/>
                 <Label Text="Architectuur" />
             </StackLayout>
 
             <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Switch HorizontalOptions="Start" Margin="50,0,0,0"/>
+                <Switch x:Name="Restaurant" HorizontalOptions="Start" Margin="50,0,0,0" IsToggled="False"/>
+                <Label Text="Restaurant" />
+            </StackLayout>
+            
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                <Switch x:Name="Overige" HorizontalOptions="Start" Margin="50,0,0,0" IsToggled="False"/>
                 <Label Text="Overige" />
             </StackLayout>
 
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Switch HorizontalOptions="Start" Margin="50,0,0,0"/>
-                <Label Text="Restaurant" />
-            </StackLayout>
+            
 
             <Button Text="Doorgaan"
                     VerticalOptions="Center"
