--- a/prjct4app/prjct4app/prjct4app/Result.xaml
+++ b/prjct4app/prjct4app/prjct4app/Result.xaml
@@ -4,18 +4,7 @@
              x:Class="prjct4app.Result">
     <ContentPage.Content>
         <StackLayout>
-            <Label x:Name="datum"
-                   Text="Tijd van vertrek" 
-                   FontSize="Large"
-                   HorizontalOptions="Center"/>
-            <Label x:Name="begintijd"
-                   Text="Tijd van vertrek" 
-                   FontSize="Large"
-                   HorizontalOptions="Center"/>
-            <Label x:Name="eindtijd"
-                   Text="Tijd van vertrek" 
-                   FontSize="Large"
-                   HorizontalOptions="Center"/>
+            <Label Text="Welcome to Xamarin Forms!" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
